// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Standardised Long renders correctly 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised"
  data-ecl-auto-init="BreadcrumbStandardised"
  data-ecl-breadcrumb-standardised="true"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
      data-ecl-breadcrumb-standardised-ellipsis=""
    >
      <button
        aria-label="Click to expand"
        class="ecl-breadcrumb-standardised__ellipsis"
        data-ecl-breadcrumb-standardised-ellipsis-button=""
        type="button"
      >
        …
      </button>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Organisational structure
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        How the Commission is organised
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Standardised Long renders correctly with EU content 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised"
  data-ecl-auto-init="BreadcrumbStandardised"
  data-ecl-breadcrumb-standardised="true"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
      data-ecl-breadcrumb-standardised-ellipsis=""
    >
      <button
        aria-label="Click to expand"
        class="ecl-breadcrumb-standardised__ellipsis"
        data-ecl-breadcrumb-standardised-ellipsis-button=""
        type="button"
      >
        …
      </button>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Organisational structure
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        How the Commission is organised
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Standardised Long renders correctly with extra attributes 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised"
  data-ecl-auto-init="BreadcrumbStandardised"
  data-ecl-breadcrumb-standardised="true"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
      data-ecl-breadcrumb-standardised-ellipsis=""
    >
      <button
        aria-label="Click to expand"
        class="ecl-breadcrumb-standardised__ellipsis"
        data-ecl-breadcrumb-standardised-ellipsis-button=""
        type="button"
      >
        …
      </button>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Organisational structure
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        How the Commission is organised
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Standardised Long renders correctly with extra class names 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised custom-class custom-class--test"
  data-ecl-auto-init="BreadcrumbStandardised"
  data-ecl-breadcrumb-standardised="true"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
      data-ecl-breadcrumb-standardised-ellipsis=""
    >
      <button
        aria-label="Click to expand"
        class="ecl-breadcrumb-standardised__ellipsis"
        data-ecl-breadcrumb-standardised-ellipsis-button=""
        type="button"
      >
        …
      </button>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Organisational structure
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        How the Commission is organised
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Standardised Simple renders correctly 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised"
  data-ecl-breadcrumb-standardised="true"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Standardised Simple renders correctly with EU content 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised"
  data-ecl-breadcrumb-standardised="true"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Standardised Simple renders correctly with extra attributes 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised"
  data-ecl-breadcrumb-standardised="true"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Standardised Simple renders correctly with extra class names 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised custom-class custom-class--test"
  data-ecl-breadcrumb-standardised="true"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Standardised with validation enabled and missing input data returns the right warning message 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-standardised"
  data-ecl-auto-init="BreadcrumbStandardised"
  data-ecl-breadcrumb-standardised="true"
>
  <ol
    class="ecl-breadcrumb-standardised__container"
  >
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Home
      </a>
      <!-- ecl2-compliance: link--standalone -->
      <div
        class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
      >
        <p
          class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
        >
          [link--standalone] - ecl compliant
        </p>
      </div>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
      data-ecl-breadcrumb-standardised-ellipsis=""
    >
      <button
        aria-label="Click to expand"
        class="ecl-breadcrumb-standardised__ellipsis"
        data-ecl-breadcrumb-standardised-ellipsis-button=""
        type="button"
      >
        …
      </button>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <!-- ecl2-compliance: link--standalone -->
      <div
        class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
      >
        <p
          class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
        >
          [link--standalone] - ecl compliant
        </p>
      </div>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        Organisational structure
      </a>
      <!-- ecl2-compliance: link--standalone -->
      <div
        class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
      >
        <p
          class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
        >
          [link--standalone] - ecl compliant
        </p>
      </div>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-standardised__segment"
      data-ecl-breadcrumb-standardised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-standardised__link"
        href="/example"
      >
        How the Commission is organised
      </a>
      <!-- ecl2-compliance: link--standalone -->
      <div
        class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
      >
        <p
          class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
        >
          [link--standalone] - ecl compliant
        </p>
      </div>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
      data-ecl-breadcrumb-standardised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;
